# inhibit-screensaver

./: .envrc  .gitignore  CHANGES.md  LICENSE  Main.hs  README.md  Setup.hs  default.nix  flake.nix  hie.yaml  inhibit-screensaver.cabal  release.nix  shell.nix
.github/workflows/: release.yml  tests.yml
app/: Main.hs
nix/: sources.json
src/System/ScreenSaver/Inhibit/: DBus.hs  LoginCtl.hs  Process.hs  XSet.hs
