cabal-version:      2.2
name:               inhibit-screensaver
version:            0.0.0.0
synopsis:           Inhibit the screensaver if a command exits successfully
license:            BSD-2-Clause
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) 2020 Peter J. Jones
homepage:           https://github.com/pjones/inhibit-screensaver
bug-reports:        https://github.com/pjones/inhibit-screensaver/issues
category:           System
build-type:         Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
source-repository head
  type:     git
  location: https://github.com/pjones/inhibit-screensaver.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual:      True
  default:     False

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

  if flag(maintainer)
    ghc-options: -Werror -fwrite-ide-info -hiedir=.hie

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , base                  >=4.9  && <5
    , dbus                  ^>=1.2
    , optparse-applicative  >=0.14 && <0.16
    , process               ^>=1.6
    , relude                >=0.5  && <0.8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

--------------------------------------------------------------------------------
library
  import:          options, dependencies, extensions
  hs-source-dirs:  src
  exposed-modules:
    System.ScreenSaver.Inhibit.DBus
    System.ScreenSaver.Inhibit.LoginCtl
    System.ScreenSaver.Inhibit.Process
    System.ScreenSaver.Inhibit.XSet

--------------------------------------------------------------------------------
executable inhibit-screensaver
  import:         options, extensions, dependencies
  build-depends:  inhibit-screensaver
  hs-source-dirs: app
  main-is:        Main.hs
